tests/rosetta/out/Haskell/burrows-wheeler-transform.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/burrows-wheeler-transform.hs:165:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/burrows-wheeler-transform.hs:154:1
                 /workspace/mochi/tests/rosetta/out/Haskell/burrows-wheeler-transform.hs:165:1
    |
165 | main = do
    | ^^^^
